Alterações nas rotas e Correções de Bugs
